--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<h1>Yes, sometimes.</h1>
-Hello, world!
-<br />
-hello, world!
+<html>
+  <head>
+    <title>This is the Title of my Page</title>
+  </head>
+</html>
+<body>
+  <h1>Hello, world!</h1>
+  yes, sometimes. yes, sometimes. yes, sometimes. yes, sometimes. yes, sometimes. yes, sometimes.
+  
+</body>
