--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title>This is the Title of my Page</title>
   </head>
 </html>
